# OpenGL-Render

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  build.sh  compile.sh  main.cpp  model_viewer  run.sh  shader.hpp
docs/: CUSTOM_MATERIALS_GUIDE.md  Gemini.md  README.md  README_MODEL_LOADING.md  TODO.md
models/: sphere.glb
models/car/: Intergalactic_Spaceship-(Wavefront).mtl
models/others/: texture_cube.fbx
src/core/: application.hpp  filesystem.hpp  window.hpp
src/renderer/: custom_shaders.hpp  framebuffer.hpp  material.hpp  mesh.hpp  model.hpp  model_factory.hpp  pbr_utils.hpp  procedural_model.hpp  render_command.hpp  renderer.hpp  shader.hpp  skybox_manager.hpp  texture.hpp
src/scene/: components.hpp  scene.hpp
src/shaders/: brdf.frag  equirect.frag  equirect.vert  irradiance.frag  pbr.frag  pbr.vert  prefilter.frag  screen.frag  screen_blur.frag  screen_grayscale.frag  skybox.frag  skybox.vert
